agregamos sistema de perfiles

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('main.create_course') }}">Crear Curso</a> <!-- Enlace para crear un curso -->
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('main.profile') }}">Mi Perfil</a>
+            </li>
+            
         </ul>
     </div>
 </nav>
